<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Finance Manager</string>
    <string name="krishna">Shree KRISHNAya Namaha</string>
    <string name="krishnarpanamastu">Sarvam Shree Krishnarpanamastu</string>
    <string name="aboutUs">About The Developer</string>
    <string name="action_edit">Edit Data</string>
    <string name="action_extras">Extras</string>
    <string name="action_help">Help</string>
    <string name="action_statistics">Statistics</string>
    <string name="action_settings">Settings</string>
    <string name="action_templates">Templates</string>
    <string name="action_transactions">Transactions</string>
    <string name="action_transactionsDisplayOptions">Options</string>
    <string name="add_bank">Add A Bank</string>
    <string name="add_expType">Add New Expenditure Type</string>
    <string name="addTemplate">Add To Templates</string>
    <string name="allBankTransactions">All Bank Transactions</string>
    <string name="amount">Amount</string>
    <string name="backup">Back-up Data</string>
    <string name="bank_credit">Bank Credit</string>
    <string name="bank_debit">Bank Withdrawal</string>
    <string name="bankSms"> Messages From Banks</string>
    <string name="clearData">Clear Data</string>
    <string name="contactDeveloper">Contact Developer</string>
    <string name="currencySymbols">Currency Symbol</string>
    <string name="date">Date</string>
    <string name="export">Export Data To SD Card</string>
    <string name="editWalletBalance">Edit Wallet Balance</string>
    <string name="editBanks">Edit Banks</string>
    <string name="editExpTypes">Edit Expenditure Types</string>
    <string name="expenditures">Expenditures</string>
    <string name="FAQ">FAQs</string>
    <string name="transactionsDisplayInterval">Display Transactions By</string>
    <string name="guide">Guide</string>
    <string name="finish">Finish</string>
    <string name="hint_bankAccNo">Account Number</string>
    <string name="hint_bankBalance">Balance</string>
    <string name="hint_bankName">Bank Name</string>
    <string name="hint_bankSmsName">Sms</string>
    <string name="colon">:</string>
    <string name="hint_export_fileName">Enter The File Name</string>
    <string name="hint_exp01">Studies</string>
    <string name="hint_exp02">Food</string>
    <string name="hint_exp03">Travels</string>
    <string name="hint_exp04">Entertainment</string>
    <string name="hint_exp05">Others</string>
    <string name="incomes">Incomes (Non Bank Transactions)</string>
    <string name="instruction_expenditure_types">Enter Five Different Types Of Expenditures. 
        If You Leave The Fields Blank, Default Values Will Be Taken</string>
    <string name="instruction_export">The Data Will Be Exported To A Text File Named</string>
    <string name="label_aboutDeveloper">About Developer</string>
    <string name="label_bankAccNo">A/c No</string>
    <string name="label_bankBalance">Balance</string>
    <string name="label_bankName">Bank Name</string>
    <string name="label_bankSmsName">SMS Name</string>
    <string name="label_edit">Edit Data</string>
    <string name="label_extras">Extras</string>
    <string name="label_help">Help</string>
    <string name="label_settings">Settings</string>
    <string name="label_statistics">Statistics</string>
    <string name="label_templates">Saved Templates</string>
    <string name="label_transactions">All Transactions</string>
    <string name="madeInIndia">Made In INDIA</string>
    <string name="next">Next</string>
    <string name="particulars">Particulars</string>
    <string name="quantity">Quantity</string>
    <string name="rate">Rate</string>
    <string name="restore">Restore</string>
    <string name="restoreInProgress">Restoring Data. 
        This may take few minutes depending on the Size of your Data</string>
    <string name="restoreData">Restore Data</string>
    <string name="save">Save</string>
    <string name="setup">Set Up</string>
    <string name="skip">Skip</string>
    <string name="slno">Sl No</string>
    <string name="splashDuration">Duration Of Splash Screen</string>
    <string name="title_amountSpent">Amount Spent</string>
    <string name="title_details">Details</string>
    <string name="title_expenditureType">Expenditure Type</string>
    <string name="type">Type</string>
    <string name="walletBalance">Amount in your Wallet</string>
    <string name="wallet_credit">Income</string>
    <string name="wallet_debit">Expenditure</string>
    <string name="wallet_view">Amount In Wallet</string>
    <string name="welcomeNote">Welcome. Let\'s Begin</string>
    <color name="background">#E2ECFF</color>
    <color name="background_top">#E2ECFF</color>
    <color name="background_middle">#E2ECFF</color>
    <color name="background_bottom">#E2ECFF</color>
    <color name="button_extras_default">#E2ECFF</color>
    <color name="button_extras_pressed">#CCCCCC</color>

</resources>
