<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:id="@+id/dialog_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
            
            <EditText
                android:id="@+id/field_particulars"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/particulars"
                android:singleLine="true"
                android:inputType="textCapWords"
                android:ems="10"
                android:nextFocusDown="@+id/edit_rate" >
                <requestFocus/>
            </EditText>
            
            <Spinner
                android:id="@+id/list_types"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:nextFocusDown="@+id/edit_rate" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
            
            <EditText
                android:id="@+id/field_rate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/rate"
                android:singleLine="true"
                android:inputType="numberDecimal"
                android:ems="5"
                android:nextFocusDown="@+id/edit_quantity" />
            
            <EditText
                android:id="@+id/field_quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/quantity"
                android:singleLine="true"
                android:inputType="number"
                android:ems="5"
                android:nextFocusDown="@+id/edit_amount" />
            
            <EditText
                android:id="@+id/field_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/amount"
                android:singleLine="true"
                android:inputType="numberDecimal"
                android:ems="5" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
            
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/date"
                android:textSize="15sp" />
            
            <EditText
                android:id="@+id/field_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:inputType="date"
                android:ems="6" />
        </LinearLayout>
        
    </LinearLayout>

</RelativeLayout>
