<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_activity_default" >
    
    <TextView
        android:id="@+id/krishna"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/krishna" />
    
    <LinearLayout
        android:id="@+id/layout_export"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_below="@+id/krishna"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:orientation="vertical"
        android:background="@drawable/button_extras"
        android:clickable="true" >
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/export"
            android:textSize="20sp" />
        
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="15dp"
            android:background="#DDDDDD" />
    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/layout_backup"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_below="@+id/layout_export"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:orientation="vertical"
        android:background="@drawable/button_extras"
        android:clickable="true" >
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/backup"
            android:textSize="20sp" />
        
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="15dp"
            android:background="#DDDDDD" />
    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/layout_restore"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_below="@+id/layout_backup"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:orientation="vertical"
        android:background="@drawable/button_extras"
        android:clickable="true" >
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/restore"
            android:textSize="20sp" />
        
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="15dp"
            android:background="#DDDDDD" />
    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/layout_clear"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_below="@+id/layout_restore"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:orientation="vertical"
        android:background="@drawable/button_extras"
        android:clickable="true" >
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/clearData"
            android:textSize="20sp" />
        
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="15dp"
            android:background="#DDDDDD" />
    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/layout_aboutUs"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_below="@+id/layout_clear"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:orientation="vertical"
        android:background="@drawable/button_extras"
        android:clickable="true" >
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/aboutUs"
            android:textSize="20sp" />
        
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="15dp"
            android:background="#DDDDDD" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:text="@string/madeInIndia"
        android:textSize="15sp" />

</RelativeLayout>
