<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_activity_settings" >

    <TextView
        android:id="@+id/krishna"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
	android:layout_centerHorizontal="true"
        android:text="@string/krishna" />
    
    <LinearLayout
        android:id="@+id/layout_splashDuration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/krishna"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:orientation="horizontal" >
        
        <TextView
            android:id="@+id/textView_splashDuration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/splashDuration" />
        
        <Spinner
            android:id="@+id/spinner_splashDuration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        
    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/layout_bankSms"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout_splashDuration"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:orientation="horizontal" >
        
        <TextView
            android:id="@+id/textView_bankSms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bankSms" />
        
        <Spinner
            android:id="@+id/spinner_bankSms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        
    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/layout_currencySymbols"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/layout_bankSms"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="30dp"
        android:orientation="horizontal" >
        
        <TextView
            android:id="@+id/textView_currencySymbols"
            android:layout_width="wrap_content"
    	    android:layout_height="wrap_content"
    	    android:text="@string/currencySymbols" />
        
        <Spinner
            android:id="@+id/spinner_currencySymbols"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/layout_transactionsDisplayInterval"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/layout_currencySymbols"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="30dp"
        android:orientation="horizontal" >
        
        <TextView
            android:id="@+id/textView_transactionsDisplayInterval"
            android:layout_width="wrap_content"
    	    android:layout_height="wrap_content"
    	    android:text="@string/transactionsDisplayInterval" />
        
        <Spinner
            android:id="@+id/spinner_transactionsDisplayInterval"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    
</RelativeLayout>
