<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    
    <RelativeLayout
        android:id="@+id/action_bar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:background="#444444" >

        <ImageView
            android:id="@+id/app_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dp"
            android:src="@drawable/app_icon" />

        <TextView
            android:id="@+id/app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/app_icon"
            android:text="@string/app_name"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />
    </RelativeLayout>

    <TextView
        android:id="@+id/krishna"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/action_bar"
	android:layout_centerHorizontal="true"
        android:text="@string/krishna" />
    
    <LinearLayout 
        android:id="@+id/parentLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/krishna"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/wallet_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >
            
            <TextView 
                android:id="@+id/wallet_view" 
                android:layout_width="wrap_content" 
                android:layout_height="wrap_content"
                android:text="@string/wallet_view"
                android:textSize="13sp" />
            
            <EditText 
                android:id="@+id/wallet_field" 
                android:layout_width="wrap_content" 
                android:layout_height="wrap_content" 
                android:ems="5" 
                android:inputType="number" 
                android:singleLine="true"
                android:textSize="13sp" />
            
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/add_bank"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="26dp"
        android:text="@string/add_bank" />

</RelativeLayout>
